--- a/src/app.css
+++ b/src/app.css
@@ -19,13 +19,13 @@
 body {
 	min-height: 100vh;
 	margin: 0;
-	background-color: var(--primary-color);
-	background: linear-gradient(
+	/* background-color: var(--primary-color); */
+	/* background: linear-gradient(
 		180deg,
 		var(--primary-color) 0%,
 		var(--secondary-color) 10.45%,
 		var(--tertiary-color) 41.35%
-	);
+	); */
 }
 
 body::before {
@@ -37,11 +37,11 @@ body::before {
 	top: 0;
 	/* left: 10vw; */
 	z-index: -1;
-	background: radial-gradient(
+	/* background: radial-gradient(
 		50% 50% at 50% 50%,
 		var(--pure-white) 0%,
 		rgba(255, 255, 255, 0) 100%
-	);
+	); */
 	opacity: 0.05;
 }
 
